<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button">Log in</string>
    <string name="login_text">Log in: </string>
    <string name="create_account_text">Don\'t have an account? Click here!</string>
    <string name="create_account_title">Create Account</string>
    <string name="create_account_button">Create Account</string>
    <string name="cancel_button">Cancel</string>
    <string name="email_label">Email: </string>
    <string name="password_label">Password: </string>
    <string name="name_label">Name: </string>
    <string name="name_hint">name</string>
    <string name="add_course_button">Add</string>
    <string name="logout_button">Log out</string>
    <string name="remove_course_button">Remove Course</string>
    <string name="profile_info_label">Profile Info: </string>
    <string name="profile_major_label">Major: </string>
    <string name="profile_class_year_label">Class year: </string>
    <string name="profile_courses_label">Courses: </string>
    <string name="profile_groups_label">Groups: </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save</string>
    <string name="profile_class_year_hint">"class of 20xx</string>
    <string name="profile_major_hint">major</string>
    <string name="add_buddy">Add Buddy</string>
    <string name="remove_buddy">Remove Buddy</string>
    <string name="buddy_requests">Buddy Requests</string>
    <string name="buddies">Buddies</string>
    <string name="group_invites">Group invites</string>
    <string name="groups">Groups</string>
    <string name="new_group">New Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="group_members">Members</string>
    <string name="group_chat">Group Chat</string>
    <string name="group_chat_hint">Enter message here</string>
    <string name="group_chat_button">Send</string>
    <string name="add_member">Add Member</string>

</resources>
