<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cpsc112.studybuddy.DisplayUsersActivity" >

    <item
        android:id="@+id/remove_course"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:onClick="removeCourse"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/remove_course_button"/>
	<item
		android:id="@+id/logout_button"
		android:orderInCategory="101"
		android:showAsAction="never"
		android:onClick="logoutUser"
		android:title="@string/logout_button"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
