<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00bfff"
    android:gravity="clip_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cpsc112.studybuddy.AuthActivity" >

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignRight="@+id/password_text"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:padding="5dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="#4682b4"
        android:textColor="#FFFFFF"
        android:text="@string/login_button"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:padding="10dp"
        android:clickable="true"
        android:textColor="#FFFFFF" 
        android:text="@string/create_account_text" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_text"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/login_button"
        android:text="@string/login_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

</RelativeLayout>