<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#add8e6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/profile_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        >
        
        <TextView
        android:id="@+id/profile_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/profile_info_label"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />
        
        <TextView
        android:id="@+id/profile_major_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:text="@string/profile_major_label"
        android:textColor="#000000" />
        
        <TextView
        android:id="@+id/profile_class_year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:text="@string/profile_class_year_label"
        android:textColor="#000000"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/profile_info_layout"
        android:orientation="vertical" >
        
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/profile_courses_label" 
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/profile_course_list"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:background="#B0C4DE" >

    </ListView>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/profile_groups_label" 
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/profile_groups_list"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:background="#B0C4DE" >

    </ListView>
        
    </LinearLayout>

</RelativeLayout>