<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/group_members_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/group_members"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:background="#33B5E5"
        android:textColor="#fff" />

    <ListView
        android:id="@+id/group_members_list"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/group_members_text" >

    </ListView>
    
    <TextView
        android:id="@+id/group_chat_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/group_members_list"
        android:text="@string/group_chat"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:background="#33B5E5"
        android:textColor="#fff" />
    
    <Button 
    	android:id="@+id/group_chat_button"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
    	android:layout_alignParentRight="true"
    	android:text="@string/group_chat_button"    >
    </Button>
    
    <EditText
        android:id="@+id/group_chat_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/group_chat_button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@id/group_chat_text"
        android:background="#fff"
        android:hint="@string/group_chat_hint"
        android:inputType="textLongMessage" >

    </EditText>
    
    <ListView
        android:id="@+id/group_chat_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/group_chat_text"
        android:layout_below="@id/group_chat_text"
        android:layout_above="@id/group_chat_field"
        android:focusable="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" >

    </ListView>
    

    
</RelativeLayout>
